--- a/notebook/EDA.ipynb
+++ b/notebook/EDA.ipynb
@@ -578,7 +578,88 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b5daad",
+   "id": "383f0a35",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Expected n_neighbors <= n_samples_fit, but n_neighbors = 6, n_samples_fit = 4, n_samples = 4",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 56\u001b[39m\n\u001b[32m     54\u001b[39m \u001b[38;5;66;03m# Apply SMOTE to the dense array\u001b[39;00m\n\u001b[32m     55\u001b[39m smote = SMOTE(random_state=\u001b[32m42\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m56\u001b[39m X_fraud_train_resampled, y_fraud_train_resampled = \u001b[43msmote\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_fraud_train_dense\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_fraud_train\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\Kifiya Projects\\Adey_Innov_FraudDetection\\.venv\\Lib\\site-packages\\imblearn\\base.py:202\u001b[39m, in \u001b[36mBaseSampler.fit_resample\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m    181\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mfit_resample\u001b[39m(\u001b[38;5;28mself\u001b[39m, X, y, **params):\n\u001b[32m    182\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Resample the dataset.\u001b[39;00m\n\u001b[32m    183\u001b[39m \n\u001b[32m    184\u001b[39m \u001b[33;03m    Parameters\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    200\u001b[39m \u001b[33;03m        The corresponding label of `X_resampled`.\u001b[39;00m\n\u001b[32m    201\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m202\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\Kifiya Projects\\Adey_Innov_FraudDetection\\.venv\\Lib\\site-packages\\sklearn\\base.py:1365\u001b[39m, in \u001b[36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[39m\u001b[34m(estimator, *args, **kwargs)\u001b[39m\n\u001b[32m   1358\u001b[39m     estimator._validate_params()\n\u001b[32m   1360\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[32m   1361\u001b[39m     skip_parameter_validation=(\n\u001b[32m   1362\u001b[39m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[32m   1363\u001b[39m     )\n\u001b[32m   1364\u001b[39m ):\n\u001b[32m-> \u001b[39m\u001b[32m1365\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfit_method\u001b[49m\u001b[43m(\u001b[49m\u001b[43mestimator\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\Kifiya Projects\\Adey_Innov_FraudDetection\\.venv\\Lib\\site-packages\\imblearn\\base.py:105\u001b[39m, in \u001b[36mSamplerMixin.fit_resample\u001b[39m\u001b[34m(self, X, y, **params)\u001b[39m\n\u001b[32m     99\u001b[39m X, y, binarize_y = \u001b[38;5;28mself\u001b[39m._check_X_y(X, y)\n\u001b[32m    101\u001b[39m \u001b[38;5;28mself\u001b[39m.sampling_strategy_ = check_sampling_strategy(\n\u001b[32m    102\u001b[39m     \u001b[38;5;28mself\u001b[39m.sampling_strategy, y, \u001b[38;5;28mself\u001b[39m._sampling_type\n\u001b[32m    103\u001b[39m )\n\u001b[32m--> \u001b[39m\u001b[32m105\u001b[39m output = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_fit_resample\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    107\u001b[39m y_ = (\n\u001b[32m    108\u001b[39m     label_binarize(output[\u001b[32m1\u001b[39m], classes=np.unique(y)) \u001b[38;5;28;01mif\u001b[39;00m binarize_y \u001b[38;5;28;01melse\u001b[39;00m output[\u001b[32m1\u001b[39m]\n\u001b[32m    109\u001b[39m )\n\u001b[32m    111\u001b[39m X_, y_ = arrays_transformer.transform(output[\u001b[32m0\u001b[39m], y_)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\Kifiya Projects\\Adey_Innov_FraudDetection\\.venv\\Lib\\site-packages\\imblearn\\over_sampling\\_smote\\base.py:359\u001b[39m, in \u001b[36mSMOTE._fit_resample\u001b[39m\u001b[34m(self, X, y)\u001b[39m\n\u001b[32m    356\u001b[39m X_class = _safe_indexing(X, target_class_indices)\n\u001b[32m    358\u001b[39m \u001b[38;5;28mself\u001b[39m.nn_k_.fit(X_class)\n\u001b[32m--> \u001b[39m\u001b[32m359\u001b[39m nns = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mnn_k_\u001b[49m\u001b[43m.\u001b[49m\u001b[43mkneighbors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_class\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreturn_distance\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m[:, \u001b[32m1\u001b[39m:]\n\u001b[32m    360\u001b[39m X_new, y_new = \u001b[38;5;28mself\u001b[39m._make_samples(\n\u001b[32m    361\u001b[39m     X_class, y.dtype, class_sample, X_class, nns, n_samples, \u001b[32m1.0\u001b[39m\n\u001b[32m    362\u001b[39m )\n\u001b[32m    363\u001b[39m X_resampled.append(X_new)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\hp\\Kifiya Projects\\Adey_Innov_FraudDetection\\.venv\\Lib\\site-packages\\sklearn\\neighbors\\_base.py:854\u001b[39m, in \u001b[36mKNeighborsMixin.kneighbors\u001b[39m\u001b[34m(self, X, n_neighbors, return_distance)\u001b[39m\n\u001b[32m    852\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m    853\u001b[39m         inequality_str = \u001b[33m\"\u001b[39m\u001b[33mn_neighbors <= n_samples_fit\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m854\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    855\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mExpected \u001b[39m\u001b[38;5;132;01m{\u001b[39;00minequality_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, but \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    856\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mn_neighbors = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_neighbors\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, n_samples_fit = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_samples_fit\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    857\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mn_samples = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mX.shape[\u001b[32m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m  \u001b[38;5;66;03m# include n_samples for common tests\u001b[39;00m\n\u001b[32m    858\u001b[39m     )\n\u001b[32m    860\u001b[39m n_jobs = effective_n_jobs(\u001b[38;5;28mself\u001b[39m.n_jobs)\n\u001b[32m    861\u001b[39m chunked_results = \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[31mValueError\u001b[39m: Expected n_neighbors <= n_samples_fit, but n_neighbors = 6, n_samples_fit = 4, n_samples = 4"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "from collections import Counter\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from scipy.sparse import hstack\n",
+    "\n",
+    "# Assume 'creditcard_data_raw' and 'fraud_data_raw' are your loaded DataFrames\n",
+    "# And that 'fraud_data_raw' has the engineered features from previous steps.\n",
+    "\n",
+    "# --- Step 1: Data Preparation and Feature Engineering for Fraud_Data ---\n",
+    "# We'll use a placeholder for your fully engineered 'Fraud_Data'\n",
+    "# In your actual code, this would be the final DataFrame after all your transformations.\n",
+    "# For this example, let's assume it has numerical and string columns.\n",
+    "fraud_data_processed = pd.DataFrame({\n",
+    "    'numerical_feature_1': np.random.rand(100),\n",
+    "    'time_since_signup': np.random.rand(100) * 100,\n",
+    "    'browser': ['Chrome', 'Firefox', 'Safari'] * 33 + ['Chrome'],\n",
+    "    'country': ['USA', 'UK', 'USA'] * 33 + ['UK'],\n",
+    "    'class': [0] * 95 + [1] * 5\n",
+    "})\n",
+    "\n",
+    "# Convert the sparse matrix to a dense array\n",
+    "X_fraud_raw = fraud_data_processed.drop('class', axis=1)\n",
+    "y_fraud = fraud_data_processed['class']\n",
+    "\n",
+    "# Separate numerical and categorical columns\n",
+    "numerical_features = X_fraud_raw.select_dtypes(include=np.number).columns.tolist()\n",
+    "categorical_features = X_fraud_raw.select_dtypes(exclude=np.number).columns.tolist()\n",
+    "\n",
+    "# --- Step 2: Train-Test Split ---\n",
+    "X_fraud_train_raw, X_fraud_test_raw, y_fraud_train, y_fraud_test = train_test_split(\n",
+    "    X_fraud_raw, y_fraud, test_size=0.2, random_state=42, stratify=y_fraud\n",
+    ")\n",
+    "\n",
+    "# --- Step 3: Apply Transformers and SMOTE ---\n",
+    "# A. Process Numerical Data (Scaling)\n",
+    "scaler = StandardScaler()\n",
+    "X_fraud_train_scaled = scaler.fit_transform(X_fraud_train_raw[numerical_features])\n",
+    "X_fraud_test_scaled = scaler.transform(X_fraud_test_raw[numerical_features])\n",
+    "\n",
+    "# B. Process Categorical Data (One-Hot Encoding)\n",
+    "encoder = OneHotEncoder(handle_unknown='ignore', sparse_output=True)\n",
+    "X_fraud_train_encoded = encoder.fit_transform(X_fraud_train_raw[categorical_features])\n",
+    "X_fraud_test_encoded = encoder.transform(X_fraud_test_raw[categorical_features])\n",
+    "\n",
+    "# C. Combine the processed features\n",
+    "X_fraud_train_processed = hstack([X_fraud_train_scaled, X_fraud_train_encoded])\n",
+    "X_fraud_test_processed = hstack([X_fraud_test_scaled, X_fraud_test_encoded])\n",
+    "\n",
+    "X_fraud_train_dense = X_fraud_train_processed.toarray()\n",
+    "\n",
+    "# Apply SMOTE to the dense array\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_fraud_train_resampled, y_fraud_train_resampled = smote.fit_resample(X_fraud_train_dense, y_fraud_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d8a0483",
    "metadata": {},
    "outputs": [],
    "source": []
